# algorithmic-music

./: .gitignore  Literature Review.docx  README.md  music-comp-analysis-seanbisset-1905262.docx  tok.tok  ~$sic-comp-analysis-seanbisset-1905262.docx  ~$terature Review.docx  ~WRL0003.tmp  ~WRL0860.tmp
algorithmic-music/: .gitignore  InstallerConf.ifp  README.md  analyser.spec
algorithmic-music/src/chroma/: ChromaGenerator.py
algorithmic-music/src/debug/: AppDebugger.py  ErrorReporter.py
algorithmic-music/src/music-analyser-app/: pyproject.toml
algorithmic-music/src/preprocess/: AudioPreprocessor.py
src/test/: audiodata.py  pysine.py  testpippi.py
